	  find_bracket_match(), do_find_bracket(), main(),
	  parse_rcfile(), nanorc.5, and nanorc.sample. (DLR)
- chars.c:
  mbstrchr()
	- Make parameter c const. (DLR)
- utils.c:
  ngetdelim()
	- Do sanity checks manually again instead of in an assert, and
	  set errno to EINVAL as well as return -1 if they fail.  This
	  matches the manual page. (DLR)
- winio.c:
  edit_redraw()
	- If either current or old_current is offscreen, we're not on
	  the first page, and/or we're not on the same page as before,
	  update old_current before scrolling the edit window.  This
	  fixes a potential display problem when a search moves the
	  cursor offscreen and onto a different page. (DLR, found by
	  Mike Frysinger)
- doc/nano.1:
	- Better display the default values for quotestr. (DLR)
- doc/nanorc.5:
	- Give the default values for the brackets and punct options,
	  and better display the default values for quotestr. (DLR)
- doc/nanorc.sample:
	- Remove unneeded comment. (DLR)

GNU nano 1.3.10 - 2005.12.23
- General:
	- Miscellaneous comment fixes. (DLR)
	- More int -> bool conversions. (DLR)
	- Add the ability to scroll up or down single lines without
	  scrolling the cursor, via Meta-- and Meta-+.  Note that this
	  is disabled when NANO_SMALL is defined.  New functions
	  do_scroll_up() and do_scroll_down(); changes to
	  shortcut_init(). (DLR, suggested by Mike Frysinger)
	- Properly handle mouse clicks on the statusbar prompt text.
	  New functions statusbar_xplustabs() and
	  get_statusbar_page_start(); changes to do_statusbar_mouse(),
	  nanoget_repaint(), nanogetstr(), and statusq(). (DLR)
	- Since the statusbar prompt code needs at least 4 columns in
	  order to work properly, make that the minimum number of
	  columns that nano requires in order to run, and remove
	  assertions and code that make use of a smaller number of
	  columns.  Changes to window_init(), nanoget_repaint(),
	  titlebar(), statusbar(), and get_page_start(). (DLR)